# VenusAutoController

./: .env.example  .gitignore  main.py  pyproject.toml  requirements.txt  test_video.html
app/: __init__.py  main.py
app/core/: __init__.py  config.py  ffmpeg.py  tunnel.py
app/routers/: __init__.py  camera.py  experiment.py  proxy.py  rtmp.py
app/schemas/: models.py
app/services/: __init__.py  camera.py  rtmp_server.py
docs/: camera.md  experiment.md  rtmp-api.md
