[project]
name = "ssh-proxy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "paramiko==3.4.0",
    "pyrtmp>=0.3.0",
    "python-dotenv>=1.2.1",
    "sshtunnel>=0.4.0",
    "uvicorn>=0.40.0",
]
